login, evaluacion, prestamos

--- a/templates/authapp/home_user.html
+++ b/templates/authapp/home_user.html
@@ -13,7 +13,7 @@
 </h1>
 
 <h2 class="mb-4 text-center">
-  <br>Acumulado fondo de ahorro
+  <br>Acumulado Fondo de Ahorro
 </h2>
 
   <div class="progress position-relative mb-4"
