--- a/templates/performance/admin/performance_view_admin.html
+++ b/templates/performance/admin/performance_view_admin.html
@@ -173,8 +173,8 @@
                                         <div class="form-check form-switch d-flex align-items-center ps-0">
                                             <input class="form-check-input me-2 mt-0" type="checkbox" id="check360" name="es_360" style="cursor: pointer; width: 35px; height: 18px; margin-left: 0;">
                                             <div class="ms-2">
-                                                <label class="form-check-label fw-bold text-dark small mb-0" for="check360" style="cursor: pointer;">Habilitar Modalidad 360°</label>
-                                                <div class="text-muted" style="font-size: 0.7rem;">Incluye pares, jefes y subordinados.</div>
+                                                <label class="form-check-label fw-bold text-dark small mb-0" for="check360" style="cursor: pointer;">Habilitar Modalidad 360° (en desarrollo)</label>
+                                                <div class="text-muted" style="font-size: 0.7rem;">Incluye pares, jefes y subordinados. (en desarrollo)</div>
                                             </div>
                                         </div>
                                     </div>
@@ -185,7 +185,7 @@
                                 <label class="selection-card justify-content-center" for="tipoCuanti">
                                     <div class="d-flex align-items-center">
                                         <div class="me-3 text-center" style="width: 50px;"><i class="fas fa-chart-line icon-indicator"></i></div>
-                                        <div><h6 class="fw-bold mb-1">Cuantitativa</h6><div class="text-muted small">Sincronización de Objetivos y KPIs.</div></div>
+                                        <div><h6 class="fw-bold mb-1">Cuantitativa  (en desarrollo)</h6><div class="text-muted small">Sincronización de Objetivos y KPIs.</div></div>
                                     </div>
                                 </label>
                             </div>
