--- a/templates/authapp/login.html
+++ b/templates/authapp/login.html
@@ -198,7 +198,7 @@
                 <input type="submit" name="signin" id="signin" class="form-submit" value="Entrar">
                 </div>
             </form>
-            {% comment %} <a href="{% url 'password_reset' %}" class="signup-image-link" style="color: rgb(169,202,72)">¿Olvidaste tu contraseña?</a> {% endcomment %}
+            <a href="{% url 'password_reset' %}" class="signup-image-link" style="color: rgb(169,202,72)">¿Olvidaste tu contraseña?</a>
         </div>
     </div>
 </body>
